# CUGBJwcAPI

./: LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: test.yml
cugb_api/: __init__.py  api.py  cli.py  client.py  cms_client.py  cms_parser.py  repository.py  server.py  settings.py
cugb_jwc_api/: __init__.py  api.py  cli.py  client.py  college_client.py  college_parser.py  models.py  parser.py  server.py  settings.py
tests/: test_api.py  test_cms_parser.py  test_college_parser.py  test_parser.py  test_repository.py  test_settings.py
tests/fixtures/: cms_list.html  college_detail.html  college_list.html  detail.html
