[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cugb-jwc-api"
version = "1.3.0"
description = "Small read-only JSON API for a public notice page"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Notice API contributors" }]
dependencies = []

[project.scripts]
cugb-jwc-api = "cugb_jwc_api.cli:main"

[tool.setuptools.packages.find]
include = ["cugb_jwc_api*"]
