[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cugb-api"
version = "2.1.0"
description = "Small read-only JSON API for a public notice page"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Notice API contributors" }]
dependencies = []

[project.scripts]
cugb-api = "cugb_api.cli:main"

[tool.setuptools.packages.find]
include = ["cugb_api*"]
